order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/Legal_Entity_Document_Config__mdt.object-meta.xml
<CustomObject>
    <label>Legal Entity Document Config</label>
    <pluralLabel>Legal Entity Document Configs</pluralLabel>
</CustomObject>