order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/fields/Billing_Entity_Value__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Value__c</fullName>
    <label>Billing Entity Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>