order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/fields/Entity_Value__c.field-meta.xml
<CustomField>
    <fullName>Entity_Value__c</fullName>
    <label>Entity Value</label>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <type>Text</type>
</CustomField>