order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/fields/Governing_Law_Clause__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law_Clause__c</fullName>
    <label>Governing Law Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>