order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/fields/Governing_Law_Short__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law_Short__c</fullName>
    <description>Text(255) copy of the governing-law clause. The stamp flow reads THIS field, never Governing_Law_Clause__c (LongTextArea): CMDT queries are SOQL-limit-exempt only while no long-text field is selected - selecting the clause made both entity lookups count and contributed to the 2026-08-27 "Too many SOQL 101" incident on the Opportunity master flow.</description>
    <label>Governing Law (Short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>