order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/fields/Registered_Office__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office__c</fullName>
    <label>Registered Office</label>
    <type>TextArea</type>
</CustomField>