order-form-v1.2/force-app/main/default/objects/Legal_Entity_Document_Config__mdt/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>